# homework_tutoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/mqtt/: publisher.py  subscription.py
app/service/: login_service.py
app/service/asr/: volcengine_streaming_asr.py
app/tests/: test_subscription.py
app/udp/: audio_server.py  image_server.py  server.py
spike/: audio.py  gradio-demo.py  gradio-demo2.py  gradio-demo3.py  image_analysis.py  llm_conversation.py  route.py  server.py  service.py  test_llm_conversation.py  text_segmenter.py  volcengine_streaming_asr.py  volcengine_websocket_tts.py  zhipu_glm_4v.ipynb
spike/docker/: nginx.conf  start_nginx.sh  stop_nginx.sh
spike/template/: homework_tutoring.html  index.html
