[tool.poetry]
name = "homework_tutoring"
version = "0.1.0"
description = ""
authors = ["qicaisheng <qicaisheng@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
zhipuai = "^2.1.5.20230904"
openai = "^1.51.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
paho-mqtt = "^2.1.0"
aiohttp = "^3.10.5"
alembic = "^1.13.2"
psycopg = "^3.2.1"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.34"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
gradio = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
